--- a/src/App.css
+++ b/src/App.css
@@ -368,7 +368,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   overflow: hidden;
 }
 .project .nav.nav-pills .nav-item {
-  width: 50%;
+  width: 33.333333333%;
 }
 .project .nav.nav-pills .nav-link {
   background-color: transparent;
