Made some changes to the projects section by including a github link in the projects description

--- a/src/App.css
+++ b/src/App.css
@@ -360,6 +360,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   width: 56%;
 }
+.project .githubLinkImg {
+  width: 10%;
+}
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
