--- a/src/App.css
+++ b/src/App.css
@@ -619,3 +619,35 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0; 
+  width: 100%;
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  z-index: 1000;
+}
+
+.popup-content {
+  background-color: black;
+  padding: 10px;
+  border-radius: 5px; 
+  position: relative; 
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.closeBtn{
+  color:white;
+}
